# payfake-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: auth.rs  charge.rs  client.rs  control.rs  customer.rs  errors.rs  lib.rs  merchant.rs  transaction.rs  types.rs
