[package]
name = "payfake"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for Payfake — Paystack-compatible payment simulator"
license = "MIT"
repository = "https://github.com/payfake/payfake-rust"
keywords = ["payfake", "paystack", "payments", "ghana", "africa"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
